--- a/styles/comingsoon.css
+++ b/styles/comingsoon.css
@@ -37,26 +37,26 @@ body
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
 }
-
+.info_txt{
+  padding-top: 100px;
+}
 .main_coming_soon p
 {
   font-family: 'Lato', sans-serif;
 	font-weight: 300;
   font-size: 18px;
 }
-
 /*Text field for email*/
 .email_row
 {
   margin: 0 auto;
-   width: 30%;
+  width: 30%;
+  padding-top: 50px;
 }
-
 .form-group input{
   border:none;
     border-bottom:1px solid #3f51b5;
     border-radius: 0px;
 }
-
 /*End text field for email*/
 /*End coming soon page*/
