--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,17 +20,12 @@ body{
 
 .btn {
     padding: 14px 24px;
+    border: 0 none;
     font-weight: 700;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     text-transform: uppercase;
 		background: none;
 }
-.btn.outline {
-	background: none;
-	padding: 12px 22px;
-	border: 4;
-}
-
 /*End Styling send button*/
 /*Credit: https://drive.google.com/file/d/0B_LOCzPvsrVneGl2cjNIcWRjcUE/view*/
 @font-face
