--- a/styles/comingsoon.css
+++ b/styles/comingsoon.css
@@ -10,6 +10,11 @@ body
   width: 100%;
     background-repeat: no-repeat;
 }
+h4
+{
+  font-family: 'Lato', sans-serif;
+	font-weight: 300;
+}
 /*coming soon page*/
 .main_coming_soon
 {
@@ -51,6 +56,8 @@ body
   padding-top: 50px;
 }
 .form-group input{
+  font-family: 'Lato', sans-serif;
+	font-weight: 300;
     border:none;
     border-bottom:1px solid #3f51b5;
     border-radius: 0px;
